similar-numbers section finished

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -605,6 +605,10 @@ video {
   margin-right: auto;
 }
 
+.mb-\[120px\] {
+  margin-bottom: 120px;
+}
+
 .mt-14 {
   margin-top: 3.5rem;
 }
@@ -615,6 +619,14 @@ video {
 
 .mt-\[51px\] {
   margin-top: 51px;
+}
+
+.mt-\[42px\] {
+  margin-top: 42px;
+}
+
+.block {
+  display: block;
 }
 
 .flex {
@@ -629,8 +641,20 @@ video {
   display: none;
 }
 
+.h-\[278px\] {
+  height: 278px;
+}
+
 .h-\[465px\] {
   height: 465px;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.w-\[1px\] {
+  width: 1px;
 }
 
 .w-full {
@@ -669,8 +693,16 @@ video {
   align-items: center;
 }
 
+.items-stretch {
+  align-items: stretch;
+}
+
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-10 {
+  gap: 2.5rem;
 }
 
 .gap-2\.5 {
@@ -697,13 +729,60 @@ video {
   gap: 99px;
 }
 
-.gap-10 {
-  gap: 2.5rem;
+.space-y-9 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2.25rem * var(--tw-space-y-reverse));
+}
+
+.border-t {
+  border-top-width: 1px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-r {
+  border-right-width: 1px;
+}
+
+.border-\[\#B9998469\] {
+  border-color: #B9998469;
+}
+
+.bg-\[\#ADA4A04D\] {
+  background-color: #ADA4A04D;
 }
 
 .bg-light-brown {
   --tw-bg-opacity: 1;
   background-color: rgb(185 153 132 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
+
+.px-\[10px\] {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.py-\[22px\] {
+  padding-top: 22px;
+  padding-bottom: 22px;
 }
 
 .pb-10px {
@@ -730,17 +809,36 @@ video {
   padding-top: 73px;
 }
 
+.pr-8 {
+  padding-right: 2rem;
+}
+
+.pr-7 {
+  padding-right: 1.75rem;
+}
+
+.pr-\[50px\] {
+  padding-right: 50px;
+}
+
+.pl-8 {
+  padding-left: 2rem;
+}
+
+.pr-6 {
+  padding-right: 1.5rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
 .font-Muller {
   font-family: "Muller", sans-serif;
 }
 
 .font-ReformaGroteskLight {
   font-family: "ReformaGroteskDemiC", "Montserrat", sans-serif;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
 }
 
 .text-2xl {
@@ -752,6 +850,21 @@ video {
   font-size: 54px;
 }
 
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-light {
   font-weight: 300;
 }
@@ -760,16 +873,20 @@ video {
   font-weight: 500;
 }
 
-.font-semibold {
-  font-weight: 600;
-}
-
 .font-normal {
   font-weight: 400;
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
 .uppercase {
   text-transform: uppercase;
+}
+
+.leading-6 {
+  line-height: 1.5rem;
 }
 
 .leading-6\.5 {
@@ -778,10 +895,6 @@ video {
 
 .leading-8 {
   line-height: 2rem;
-}
-
-.leading-6 {
-  line-height: 1.5rem;
 }
 
 .leading-\[55\.73px\] {
@@ -797,6 +910,11 @@ video {
   color: rgb(49 50 69 / var(--tw-text-opacity));
 }
 
+.text-light-brown {
+  --tw-text-opacity: 1;
+  color: rgb(185 153 132 / var(--tw-text-opacity));
+}
+
 .text-light-gray {
   color: #313245B2;
 }
@@ -804,11 +922,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-light-brown {
-  --tw-text-opacity: 1;
-  color: rgb(185 153 132 / var(--tw-text-opacity));
 }
 
 .shadow {
@@ -862,7 +975,7 @@ body {
 }
 
 .title {
-  font-family: "ReformaGroteskDemiC", "Montserrat", sans-serif;
+  /* font-ReformaGroteskLight  */
   font-size: 96px;
   font-weight: 400;
   text-transform: uppercase;
@@ -870,6 +983,7 @@ body {
   letter-spacing: 0.01em;
   --tw-text-opacity: 1;
   color: rgb(185 153 132 / var(--tw-text-opacity));
+  font-family: "ReformaGroteskDemiC";
 }
 
 .desc {
