--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -610,6 +610,10 @@ video {
   margin-bottom: 120px;
 }
 
+.mr-auto {
+  margin-right: auto;
+}
+
 .mt-14 {
   margin-top: 3.5rem;
 }
@@ -628,22 +632,6 @@ video {
 
 .mt-\[60px\] {
   margin-top: 60px;
-}
-
-.mr-\[102px\] {
-  margin-right: 102px;
-}
-
-.mr-\[52px\] {
-  margin-right: 52px;
-}
-
-.ml-\[102px\] {
-  margin-left: 102px;
-}
-
-.mr-auto {
-  margin-right: auto;
 }
 
 .block {
@@ -674,12 +662,12 @@ video {
   height: 52px;
 }
 
-.h-full {
-  height: 100%;
-}
-
 .h-\[584px\] {
   height: 584px;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .w-\[1px\] {
@@ -690,12 +678,12 @@ video {
   width: 52px;
 }
 
-.w-full {
-  width: 100%;
-}
-
 .w-\[565px\] {
   width: 565px;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .max-w-\[1388px\] {
@@ -706,16 +694,12 @@ video {
   max-width: 270px;
 }
 
-.max-w-\[515px\] {
-  max-width: 515px;
-}
-
-.max-w-\[292px\] {
-  max-width: 292px;
-}
-
 .max-w-\[310px\] {
   max-width: 310px;
+}
+
+.max-w-\[515px\] {
+  max-width: 515px;
 }
 
 .transform {
@@ -778,16 +762,16 @@ video {
   gap: 108px;
 }
 
+.gap-\[52px\] {
+  gap: 52px;
+}
+
 .gap-\[53px\] {
   gap: 53px;
 }
 
 .gap-\[99px\] {
   gap: 99px;
-}
-
-.gap-\[52px\] {
-  gap: 52px;
 }
 
 .space-y-9 > :not([hidden]) ~ :not([hidden]) {
@@ -844,13 +828,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-border-color {
-  background-color: #B9998469;
-}
-
 .px-\[10px\] {
   padding-left: 10px;
   padding-right: 10px;
+}
+
+.px-\[22px\] {
+  padding-left: 22px;
+  padding-right: 22px;
 }
 
 .py-6 {
@@ -861,11 +846,6 @@ video {
 .py-\[22px\] {
   padding-top: 22px;
   padding-bottom: 22px;
-}
-
-.px-\[22px\] {
-  padding-left: 22px;
-  padding-right: 22px;
 }
 
 .pb-10px {
@@ -888,6 +868,14 @@ video {
   padding-bottom: 120px;
 }
 
+.pb-\[18px\] {
+  padding-bottom: 18px;
+}
+
+.pb-\[60px\] {
+  padding-bottom: 60px;
+}
+
 .pb-\[61px\] {
   padding-bottom: 61px;
 }
@@ -908,6 +896,10 @@ video {
   padding-right: 1.75rem;
 }
 
+.pr-\[102px\] {
+  padding-right: 102px;
+}
+
 .pt-6 {
   padding-top: 1.5rem;
 }
@@ -916,44 +908,24 @@ video {
   padding-top: 1.75rem;
 }
 
-.pt-\[110px\] {
-  padding-top: 110px;
-}
-
-.pt-\[73px\] {
-  padding-top: 73px;
-}
-
 .pt-9 {
   padding-top: 2.25rem;
 }
 
-.pb-\[60px\] {
-  padding-bottom: 60px;
+.pt-\[110px\] {
+  padding-top: 110px;
 }
 
-.pr-\[50px\] {
-  padding-right: 50px;
-}
-
-.pr-\[102px\] {
-  padding-right: 102px;
-}
-
-.pb-0 {
-  padding-bottom: 0px;
+.pt-\[18px\] {
+  padding-top: 18px;
 }
 
 .pt-\[26px\] {
   padding-top: 26px;
 }
 
-.pb-\[18px\] {
-  padding-bottom: 18px;
-}
-
-.pt-\[18px\] {
-  padding-top: 18px;
+.pt-\[73px\] {
+  padding-top: 73px;
 }
 
 .text-center {
@@ -961,11 +933,15 @@ video {
 }
 
 .font-Muller {
-  font-family: "Muller", sans-serif;
+  font-family: "Muller-Regular18", sans-serif;
 }
 
 .font-ReformaGroteskLight {
-  font-family: "ReformaGroteskDemiC", "Montserrat", sans-serif;
+  font-family: "Reforma Grotesk Light W08 Rg", "Montserrat", sans-serif;
+}
+
+.font-ReformaGroteskMedium {
+  font-family: "Reforma Grotesk W01 Medium", "Montserrat", sans-serif;
 }
 
 .text-2xl {
@@ -1036,6 +1012,10 @@ video {
   line-height: 18px;
 }
 
+.leading-\[22px\] {
+  line-height: 22px;
+}
+
 .leading-\[33px\] {
   line-height: 33px;
 }
@@ -1044,16 +1024,8 @@ video {
   line-height: 55.73px;
 }
 
-.leading-\[22px\] {
-  line-height: 22px;
-}
-
 .tracking-wide {
   letter-spacing: 2px;
-}
-
-.tracking-\[0\.03em\] {
-  letter-spacing: 0.03em;
 }
 
 .text-graphite-gray {
@@ -1124,6 +1096,18 @@ video {
       format("svg");
 }
 
+@font-face {
+  font-family: "Reforma Grotesk W01 Medium";
+
+  src: url("https://db.onlinewebfonts.com/t/10135661a95d79b0adf85109e0ecfcf2.eot");
+
+  src: url("https://db.onlinewebfonts.com/t/10135661a95d79b0adf85109e0ecfcf2.eot?#iefix")format("embedded-opentype"),
+  url("https://db.onlinewebfonts.com/t/10135661a95d79b0adf85109e0ecfcf2.woff2")format("woff2"),
+  url("https://db.onlinewebfonts.com/t/10135661a95d79b0adf85109e0ecfcf2.woff")format("woff"),
+  url("https://db.onlinewebfonts.com/t/10135661a95d79b0adf85109e0ecfcf2.ttf")format("truetype"),
+  url("https://db.onlinewebfonts.com/t/10135661a95d79b0adf85109e0ecfcf2.svg#Reforma Grotesk W01 Medium")format("svg");
+}
+
 body {
   --tw-bg-opacity: 1;
   background-color: rgb(49 50 69 / var(--tw-bg-opacity));
@@ -1147,7 +1131,7 @@ body {
 }
 
 .title {
-  font-family: "ReformaGroteskDemiC", "Montserrat", sans-serif;
+  font-family: "Reforma Grotesk Light W08 Rg", "Montserrat", sans-serif;
   font-size: 96px;
   font-weight: 400;
   text-transform: uppercase;
@@ -1159,7 +1143,7 @@ body {
 }
 
 .title-lg {
-  font-family: "ReformaGroteskDemiC", "Montserrat", sans-serif;
+  font-family: "Reforma Grotesk Light W08 Rg", "Montserrat", sans-serif;
   font-size: 128px;
   font-weight: 400;
   text-transform: uppercase;
@@ -1171,7 +1155,7 @@ body {
 }
 
 .title-xs {
-  font-family: "Muller", sans-serif;
+  font-family: "Muller-Regular18", sans-serif;
   font-size: 2.25rem;
   font-weight: 400;
   text-transform: uppercase;
@@ -1182,7 +1166,7 @@ body {
 }
 
 .desc {
-  font-family: "Muller", sans-serif;
+  font-family: "Muller-Regular18", sans-serif;
   font-size: 1.125rem;
   font-weight: 300;
   line-height: 1.5rem;
@@ -1207,7 +1191,7 @@ body {
   padding-bottom: 0.5rem;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
-  font-family: "Muller", sans-serif;
+  font-family: "Muller-Regular18", sans-serif;
   font-size: 0.875rem;
   line-height: 1.25rem;
   font-weight: 400;
@@ -1235,7 +1219,7 @@ body {
   gap: 1rem;
   padding-top: 83px;
   padding-bottom: 1.25rem;
-  font-family: "Muller", sans-serif;
+  font-family: "Muller-Regular18", sans-serif;
   font-size: 0.875rem;
   line-height: 1.25rem;
   line-height: 14px;
