--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -16,7 +16,7 @@
   /* 2 */
   border-style: solid;
   /* 2 */
-  border-color: #e5e7eb;
+  border-color: currentColor;
   /* 2 */
 }
 
@@ -610,6 +610,18 @@ video {
   margin-bottom: 120px;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mb-\[43px\] {
+  margin-bottom: 43px;
+}
+
+.mb-\[52px\] {
+  margin-bottom: 52px;
+}
+
 .mr-auto {
   margin-right: auto;
 }
@@ -618,8 +630,28 @@ video {
   margin-top: 3.5rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .mt-\[120px\] {
   margin-top: 120px;
+}
+
+.mt-\[15px\] {
+  margin-top: 15px;
+}
+
+.mt-\[30px\] {
+  margin-top: 30px;
+}
+
+.mt-\[33px\] {
+  margin-top: 33px;
+}
+
+.mt-\[3px\] {
+  margin-top: 3px;
 }
 
 .mt-\[42px\] {
@@ -632,6 +664,22 @@ video {
 
 .mt-\[60px\] {
   margin-top: 60px;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
 .block {
@@ -648,6 +696,10 @@ video {
 
 .hidden {
   display: none;
+}
+
+.h-\[1px\] {
+  height: 1px;
 }
 
 .h-\[278px\] {
@@ -702,6 +754,10 @@ video {
   max-width: 515px;
 }
 
+.max-w-md {
+  max-width: 28rem;
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -738,6 +794,10 @@ video {
   justify-content: space-between;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .gap-10 {
   gap: 2.5rem;
 }
@@ -748,6 +808,10 @@ video {
 
 .gap-3 {
   gap: 0.75rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .gap-6 {
@@ -774,6 +838,12 @@ video {
   gap: 99px;
 }
 
+.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+
 .space-y-9 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(2.25rem * calc(1 - var(--tw-space-y-reverse)));
@@ -786,8 +856,20 @@ video {
   margin-bottom: calc(52px * var(--tw-space-y-reverse));
 }
 
+.whitespace-nowrap {
+  white-space: nowrap;
+}
+
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.border-\[0\.3px\] {
+  border-width: 0.3px;
 }
 
 .border-b {
@@ -802,6 +884,10 @@ video {
   border-top-width: 1px;
 }
 
+.border-dashed {
+  border-style: dashed;
+}
+
 .border-\[\#B9998469\] {
   border-color: #B9998469;
 }
@@ -812,6 +898,11 @@ video {
 
 .border-border-color {
   border-color: #B9998469;
+}
+
+.border-light-brown {
+  --tw-border-opacity: 1;
+  border-color: rgb(185 153 132 / var(--tw-border-opacity));
 }
 
 .bg-\[\#ADA4A04D\] {
@@ -828,6 +919,10 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.p-6 {
+  padding: 1.5rem;
+}
+
 .px-\[10px\] {
   padding-left: 10px;
   padding-right: 10px;
@@ -841,6 +936,11 @@ video {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+.py-\[18px\] {
+  padding-top: 18px;
+  padding-bottom: 18px;
 }
 
 .py-\[22px\] {
@@ -880,6 +980,10 @@ video {
   padding-bottom: 61px;
 }
 
+.pb-\[76px\] {
+  padding-bottom: 76px;
+}
+
 .pl-8 {
   padding-left: 2rem;
 }
@@ -916,12 +1020,12 @@ video {
   padding-top: 110px;
 }
 
-.pt-\[18px\] {
-  padding-top: 18px;
-}
-
 .pt-\[26px\] {
   padding-top: 26px;
+}
+
+.pt-\[58px\] {
+  padding-top: 58px;
 }
 
 .pt-\[73px\] {
@@ -934,6 +1038,14 @@ video {
 
 .font-Muller {
   font-family: "Muller-Regular18", sans-serif;
+}
+
+.font-MullerLight {
+  font-family: "Muller W00 Light", sans-serif;
+}
+
+.font-Mullerr {
+  font-family: "Muller", sans-serif;
 }
 
 .font-ReformaGroteskLight {
@@ -971,9 +1083,19 @@ video {
   line-height: 1.25rem;
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .font-light {
@@ -996,6 +1118,10 @@ video {
   text-transform: uppercase;
 }
 
+.leading-4 {
+  line-height: 1rem;
+}
+
 .leading-6 {
   line-height: 1.5rem;
 }
@@ -1010,6 +1136,10 @@ video {
 
 .leading-\[18px\] {
   line-height: 18px;
+}
+
+.leading-\[20px\] {
+  line-height: 20px;
 }
 
 .leading-\[22px\] {
@@ -1051,9 +1181,25 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-gray {
+  --tw-text-opacity: 1;
+  color: rgb(61 61 61 / var(--tw-text-opacity));
+}
+
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1101,11 +1247,16 @@ video {
 
   src: url("https://db.onlinewebfonts.com/t/10135661a95d79b0adf85109e0ecfcf2.eot");
 
-  src: url("https://db.onlinewebfonts.com/t/10135661a95d79b0adf85109e0ecfcf2.eot?#iefix")format("embedded-opentype"),
-  url("https://db.onlinewebfonts.com/t/10135661a95d79b0adf85109e0ecfcf2.woff2")format("woff2"),
-  url("https://db.onlinewebfonts.com/t/10135661a95d79b0adf85109e0ecfcf2.woff")format("woff"),
-  url("https://db.onlinewebfonts.com/t/10135661a95d79b0adf85109e0ecfcf2.ttf")format("truetype"),
-  url("https://db.onlinewebfonts.com/t/10135661a95d79b0adf85109e0ecfcf2.svg#Reforma Grotesk W01 Medium")format("svg");
+  src: url("https://db.onlinewebfonts.com/t/10135661a95d79b0adf85109e0ecfcf2.eot?#iefix")
+      format("embedded-opentype"),
+    url("https://db.onlinewebfonts.com/t/10135661a95d79b0adf85109e0ecfcf2.woff2")
+      format("woff2"),
+    url("https://db.onlinewebfonts.com/t/10135661a95d79b0adf85109e0ecfcf2.woff")
+      format("woff"),
+    url("https://db.onlinewebfonts.com/t/10135661a95d79b0adf85109e0ecfcf2.ttf")
+      format("truetype"),
+    url("https://db.onlinewebfonts.com/t/10135661a95d79b0adf85109e0ecfcf2.svg#Reforma Grotesk W01 Medium")
+      format("svg");
 }
 
 body {
@@ -1225,4 +1376,77 @@ body {
   line-height: 14px;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.gray-btn {
+  border-radius: 50px;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(49 50 69 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(49 50 69 / var(--tw-bg-opacity));
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 22px;
+  padding-right: 22px;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  line-height: 18px;
+  --tw-text-opacity: 1;
+  color: rgb(185 153 132 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transition-timing-function: linear;
+}
+
+.gray-btn:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 153 132 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(49 50 69 / var(--tw-text-opacity));
+}
+
+.brown-btn {
+  border-radius: 50px;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(185 153 132 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 153 132 / var(--tw-bg-opacity));
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 22px;
+  padding-right: 22px;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  line-height: 18px;
+  --tw-text-opacity: 1;
+  color: rgb(49 50 69 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transition-timing-function: linear;
+}
+
+.brown-btn:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(49 50 69 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(185 153 132 / var(--tw-text-opacity));
+}
+
+.title-xl {
+  font-family: "Reforma Grotesk Light W08 Rg", "Montserrat", sans-serif;
+  font-size: 54px;
+  font-weight: 500;
+  line-height: 55.73px;
+  letter-spacing: 0.01em;
+  text-align: left;
+  color: #3D3D3D;
+  text-transform:uppercase;
 }
