--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -570,6 +570,12 @@ video {
   }
 }
 
+@media (min-width: 992px) {
+  .container {
+    max-width: 992px;
+  }
+}
+
 @media (min-width: 1024px) {
   .container {
     max-width: 1024px;
@@ -600,6 +606,10 @@ video {
   position: sticky;
 }
 
+.-order-1 {
+  order: -1;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -614,12 +624,12 @@ video {
   margin-bottom: 0.75rem;
 }
 
-.mb-\[43px\] {
-  margin-bottom: 43px;
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
-.mb-\[52px\] {
-  margin-bottom: 52px;
+.mb-\[38px\] {
+  margin-bottom: 38px;
 }
 
 .mr-auto {
@@ -630,12 +640,12 @@ video {
   margin-top: 2.5rem;
 }
 
-.mt-14 {
-  margin-top: 3.5rem;
-}
-
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .mt-\[120px\] {
@@ -644,10 +654,6 @@ video {
 
 .mt-\[15px\] {
   margin-top: 15px;
-}
-
-.mt-\[30px\] {
-  margin-top: 30px;
 }
 
 .mt-\[33px\] {
@@ -722,24 +728,12 @@ video {
   width: 52px;
 }
 
-.w-\[565px\] {
-  width: 565px;
-}
-
 .w-full {
   width: 100%;
 }
 
-.max-w-\[1388px\] {
-  max-width: 1388px;
-}
-
 .max-w-\[270px\] {
   max-width: 270px;
-}
-
-.max-w-\[310px\] {
-  max-width: 310px;
 }
 
 .max-w-\[515px\] {
@@ -790,10 +784,6 @@ video {
   gap: 2.5rem;
 }
 
-.gap-2\.5 {
-  gap: 0.625rem;
-}
-
 .gap-3 {
   gap: 0.75rem;
 }
@@ -806,6 +796,10 @@ video {
   gap: 1.5rem;
 }
 
+.gap-8 {
+  gap: 2rem;
+}
+
 .gap-\[102px\] {
   gap: 102px;
 }
@@ -814,16 +808,22 @@ video {
   gap: 108px;
 }
 
-.gap-\[52px\] {
-  gap: 52px;
-}
-
 .gap-\[53px\] {
   gap: 53px;
 }
 
 .gap-\[99px\] {
   gap: 99px;
+}
+
+.gap-y-\[19px\] {
+  row-gap: 19px;
+}
+
+.space-y-5 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 
 .space-y-8 > :not([hidden]) ~ :not([hidden]) {
@@ -836,12 +836,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(2.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2.25rem * var(--tw-space-y-reverse));
-}
-
-.space-y-\[52px\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(52px * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(52px * var(--tw-space-y-reverse));
 }
 
 .whitespace-nowrap {
@@ -903,14 +897,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .px-\[10px\] {
   padding-left: 10px;
   padding-right: 10px;
-}
-
-.px-\[22px\] {
-  padding-left: 22px;
-  padding-right: 22px;
 }
 
 .py-6 {
@@ -944,16 +938,12 @@ video {
   padding-bottom: 1.75rem;
 }
 
-.pb-\[120px\] {
-  padding-bottom: 120px;
-}
-
 .pb-\[18px\] {
   padding-bottom: 18px;
 }
 
-.pb-\[60px\] {
-  padding-bottom: 60px;
+.pb-\[50px\] {
+  padding-bottom: 50px;
 }
 
 .pb-\[61px\] {
@@ -980,8 +970,8 @@ video {
   padding-right: 1.75rem;
 }
 
-.pr-\[102px\] {
-  padding-right: 102px;
+.pt-5 {
+  padding-top: 1.25rem;
 }
 
 .pt-6 {
@@ -992,16 +982,12 @@ video {
   padding-top: 1.75rem;
 }
 
-.pt-9 {
-  padding-top: 2.25rem;
-}
-
-.pt-\[110px\] {
-  padding-top: 110px;
-}
-
 .pt-\[26px\] {
   padding-top: 26px;
+}
+
+.pt-\[50px\] {
+  padding-top: 50px;
 }
 
 .pt-\[58px\] {
@@ -1012,6 +998,10 @@ video {
   padding-top: 73px;
 }
 
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1020,12 +1010,8 @@ video {
   font-family: "Muller";
 }
 
-.font-ReformaGroteskLight {
-  font-family: "Reforma Grotesk Light W08 Rg", "Montserrat", sans-serif;
-}
-
-.font-ReformaGroteskMedium {
-  font-family: "Reforma Grotesk W01 Medium", "Montserrat", sans-serif;
+.font-ReformaGrotesk {
+  font-family: "ReformaGrotesk", "Montserrat", sans-serif;
 }
 
 .text-2xl {
@@ -1111,10 +1097,6 @@ video {
 
 .leading-\[20px\] {
   line-height: 20px;
-}
-
-.leading-\[22px\] {
-  line-height: 22px;
 }
 
 .leading-\[33px\] {
@@ -1246,7 +1228,7 @@ body {
 }
 
 .title {
-  font-family: "Reforma Grotesk Light W08 Rg", "Montserrat", sans-serif;
+  font-family: "ReformaGrotesk", "Montserrat", sans-serif;
   font-size: 96px;
   font-weight: 400;
   text-transform: uppercase;
@@ -1258,7 +1240,7 @@ body {
 }
 
 .title-lg {
-  font-family: "Reforma Grotesk Light W08 Rg", "Montserrat", sans-serif;
+  font-family: "ReformaGrotesk", "Montserrat", sans-serif;
   font-size: 128px;
   font-weight: 400;
   text-transform: uppercase;
@@ -1416,7 +1398,7 @@ body {
 }
 
 .title-xl {
-  font-family: "Reforma Grotesk Light W08 Rg", "Montserrat", sans-serif;
+  font-family: "ReformaGrotesk", "Montserrat", sans-serif;
   font-size: 54px;
   font-weight: 500;
   line-height: 55.73px;
@@ -1461,7 +1443,7 @@ input[type="range"] {
   position: absolute;
   background-color: #31324540;
   pointer-events: none;
-  width:351px;
+  width: 351px;
   height: 1px;
 }
 
@@ -1494,4 +1476,237 @@ input[type="range"] {
   width: 1px;
   height: 10px;
   background-color: #666;
+}
+
+/* media queris */
+
+@media screen and (max-width: 1280px) {
+  .container {
+    max-width: 100%;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .title-lg {
+    font-size: 64px;
+    font-weight: 400;
+    line-height: 70.16px;
+    letter-spacing: 0.01em;
+  }
+
+  .title {
+    font-size: 74px;
+    line-height: 80.16px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .title-lg {
+    font-size: 54px;
+    font-weight: 400;
+    line-height: 60.16px;
+    letter-spacing: 0.01em;
+  }
+
+  .title-xs {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+
+  .breadcrumb ul {
+    padding: 46px 0 10px 0;
+  }
+
+  .title {
+    font-size: 54px;
+    font-weight: 400;
+    line-height: 60.16px;
+    letter-spacing: 0.01em;
+  }
+
+  .interyer-nomer__swiper .swiper-slide-active{
+    min-width: unset !important;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:order-1 {
+    order: 1;
+  }
+
+  .md\:mb-\[43px\] {
+    margin-bottom: 43px;
+  }
+
+  .md\:mb-\[52px\] {
+    margin-bottom: 52px;
+  }
+
+  .md\:mt-\[30px\] {
+    margin-top: 30px;
+  }
+
+  .md\:block {
+    display: block;
+  }
+
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
+  .md\:w-\[175px\] {
+    width: 175px;
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
+  .md\:items-end {
+    align-items: flex-end;
+  }
+
+  .md\:items-center {
+    align-items: center;
+  }
+
+  .md\:gap-2\.5 {
+    gap: 0.625rem;
+  }
+
+  .md\:px-\[22px\] {
+    padding-left: 22px;
+    padding-right: 22px;
+  }
+
+  .md\:pb-\[120px\] {
+    padding-bottom: 120px;
+  }
+
+  .md\:pt-9 {
+    padding-top: 2.25rem;
+  }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .md\:leading-\[22px\] {
+    line-height: 22px;
+  }
+
+  .md\:text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+}
+
+@media (min-width: 992px) {
+  .lg-plus\:flex {
+    display: flex;
+  }
+
+  .lg-plus\:border-r {
+    border-right-width: 1px;
+  }
+
+  .lg-plus\:border-b-0 {
+    border-bottom-width: 0px;
+  }
+
+  .lg-plus\:pr-7 {
+    padding-right: 1.75rem;
+  }
+
+  .lg-plus\:pb-2 {
+    padding-bottom: 0.5rem;
+  }
+
+  .lg-plus\:pt-6 {
+    padding-top: 1.5rem;
+  }
+
+  .lg-plus\:pl-\[26px\] {
+    padding-left: 26px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:mt-14 {
+    margin-top: 3.5rem;
+  }
+
+  .lg\:w-\[565px\] {
+    width: 565px;
+  }
+
+  .lg\:w-auto {
+    width: auto;
+  }
+
+  .lg\:max-w-\[310px\] {
+    max-width: 310px;
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:space-y-\[52px\] > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(52px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(52px * var(--tw-space-y-reverse));
+  }
+
+  .lg\:border-r {
+    border-right-width: 1px;
+  }
+
+  .lg\:pb-\[60px\] {
+    padding-bottom: 60px;
+  }
+
+  .lg\:pr-8 {
+    padding-right: 2rem;
+  }
+
+  .lg\:pt-9 {
+    padding-top: 2.25rem;
+  }
+
+  .lg\:pt-\[110px\] {
+    padding-top: 110px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:max-w-\[1388px\] {
+    max-width: 1388px;
+  }
+
+  .xl\:gap-\[52px\] {
+    gap: 52px;
+  }
+
+  .xl\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .xl\:pr-\[102px\] {
+    padding-right: 102px;
+  }
 }
