--- a/src/css/global.css
+++ b/src/css/global.css
@@ -50,12 +50,12 @@ body {
 }
 
 .title {
-  @apply font-ReformaGroteskLight text-[96px] font-normal uppercase leading-[106.94px] tracking-[0.01em] text-light-brown;
+  @apply font-ReformaGrotesk text-[96px] font-normal uppercase leading-[106.94px] tracking-[0.01em] text-light-brown;
   font-family: "Reforma Grotesk Light W08 Rg";
 }
 
 .title-lg {
-  @apply font-ReformaGroteskLight text-[128px] font-normal uppercase leading-[142.59px] tracking-[0.01em] text-light-brown;
+  @apply font-ReformaGrotesk text-[128px] font-normal uppercase leading-[142.59px] tracking-[0.01em] text-light-brown;
   font-family: "Reforma Grotesk Light W08 Rg";
 }
 
@@ -96,7 +96,7 @@ body {
 }
 
 .title-xl {
-  @apply font-ReformaGroteskLight;
+  @apply font-ReformaGrotesk;
   font-size: 54px;
   font-weight: 500;
   line-height: 55.73px;
@@ -176,5 +176,42 @@ input[type="range"] {
 @media screen and (max-width: 1280px) {
   .container {
     @apply max-w-full px-5;
+  }
+}
+@media screen and (max-width: 992px) {
+  .title-lg {
+    font-size: 64px;
+    font-weight: 400;
+    line-height: 70.16px;
+    letter-spacing: 0.01em;
+  }
+  .title {
+    font-size: 74px;
+    line-height: 80.16px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .title-lg {
+    font-size: 54px;
+    font-weight: 400;
+    line-height: 60.16px;
+    letter-spacing: 0.01em;
+  }
+  .title-xs {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+  .breadcrumb ul {
+    padding: 46px 0 10px 0;
+  }
+  .title {
+    font-size: 54px;
+    font-weight: 400;
+    line-height: 60.16px;
+    letter-spacing: 0.01em;
+  }
+  .interyer-nomer__swiper .swiper-slide-active{
+    min-width: unset !important;
   }
 }
